--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
-    <script src="libraries/p5.min.js"></script>
-    <script src="libraries//p5.speech.js".js></script>
-    <script src="libraries/p5.sound.min.js"></script>
+    <script src="gayy/p5.min.js"></script>
+    <script src="gayy/p5.speech.js".js></script>
+    <script src="gayy/p5.sound.min.js"></script>
   </head>
 
   <body>
