--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <script src="gayy/p5.min.js"></script>
-    <script src="gayy/p5.speech.js".js></script>
+    <script src="gayy/p5.speech.js"></script>
     <script src="gayy/p5.sound.min.js"></script>
   </head>
 
